--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,16 @@
     transform: rotate(360deg);
   }
 }
+.navbar{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  background-color: cyan;
+  width:100%;
+  height:50px;
+}
+.heading{
+  display:flex;
+  align-items: center;
+  background-color: coral;
+}
